2003-01-29 Lluis Sanchez Gual <lluis@ideary.com>

	* RemotingServices.cs: Added support for WellKnownService objects.
	* RemotingConfiguration.cs: Implemented most of methods (Configure is not working yet).
	* ObjRef.cs: Added initialization of channel info in default constructor.
	* Identity.cs: Added support for WellKnownService objects.

2003-01-28 Patrik Torstensson

	* ObjRef.cs: Fixed Objref marshalling flags
	
2003-01-24 Lluis Sanchez Gual <lluis@ideary.com>

	* RemotingServices.cs: Implemented some missing methods: IsMethodOverloaded, 
	  SetObjectUriForMarshal, IsOneWay, IsObjectOutOfAppDomain, 
	  IsObjectOutOfContext, GetObjRefForProxy, GetObjectData,
	  GetMethodBaseFromMethodMessage.
	* TypeInfo.cs: Added.
	* ObjRef.cs: Implemented serialization and added support for IRemotingTypeInfo.

2002-12-28 Lluis Sanchez Gual <lluis@ideary.com>

	* SoapServices.cs: Implemented some methods

2002-12-20 Lluis Sanchez Gual <lluis@ideary.com>

	* ObjRef.cs: Implementation now based on methods of RemotingServices.
	* RemotingServices.cs: Remoting information now kept in Identity objects.
	  All methods adapted to work with identities.
	  Renamed ExecuteMessage to InternalExecuteMessage. ExecuteMessage should
	  not make a direct call to the object.
	* Identity.cs: added.

2002-12-11  Jaime Anguiano Olarra <jaime@gnome.org>

	* RemotingConfiguration.cs: added to the CVS.

2002-11-29  Jaime Anguiano Olarra <jaime@gnome.org>

	* ObjectHandle.cs: added implementation  for InitializeLifetimeService
	* method.


2002-11-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SoapServices.cs: fix error CS3005.

2002-09-03  Dietmar Maurer  <dietmar@ximian.com>

	* RemotingServices.cs: add an unique app_id string used to generate
	unique object uris.

	* ObjRef.cs: added serialization support

2002-08-31  Dietmar Maurer  <dietmar@ximian.com>

	* ObjRef.cs: gather the channel date at creation time.

2002-08-20  Dietmar Maurer  <dietmar@ximian.com>
